--- a/style.css
+++ b/style.css
@@ -51,3 +51,13 @@ ul {
 li {
   margin-bottom: 0.25em;
 }
+
+input {
+    padding: 5px;
+    border-color: #616161;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 12px;
+
+    width: 400px;
+}
